--- a/events.html
+++ b/events.html
@@ -1,5 +1,8 @@
 <!DOCTYPE HTML>
 <html>
+	
+<meta name="viewport", content="width=device-width, initial-scale=1">
+
 	<head>
 		<title>WiM</title>
 		<meta charset="utf-8" />
