--- a/events.html
+++ b/events.html
@@ -1,8 +1,5 @@
 <!DOCTYPE HTML>
 <html>
-	
-<meta name="viewport", content="width=device-width, initial-scale=1">
-
 	<head>
 		<title>WiM</title>
 		<meta charset="utf-8" />
@@ -37,8 +34,8 @@
 		</header>
 
 		<!-- Calender -->
-		<p>https://support.google.com/calendar/answer/41207?hl=en</p>
-		<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=ucbwim%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+		<!-- https://support.google.com/calendar/answer/41207?hl=en -->
+		<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=ucbwim%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no" class="center"></iframe>
 
 </body>
 </html>
