--- a/events.html
+++ b/events.html
@@ -5,6 +5,13 @@
 		<meta charset="utf-8" />
 		<meta name="viewport", content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="index.css"/>
+		<style>
+			img {
+			    display: block;
+			    margin-left: auto;
+			    margin-right: auto;
+			}
+		</style>
 	</head>
 
 	<body>
