--- a/events.html
+++ b/events.html
@@ -5,13 +5,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport", content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="index.css"/>
-		<style>
-			img {
-			    display: block;
-			    margin-left: auto;
-			    margin-right: auto;
-			}
-		</style>
 	</head>
 
 	<body>
@@ -41,8 +34,8 @@
 		</header>
 
 		<!-- Calender -->
-		<!-- https://support.google.com/calendar/answer/41207?hl=en -->
-		<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=ucbwim%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no" class="center"></iframe>
+		<!--https://support.google.com/calendar/answer/41207?hl=en-->
+		<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=ucbwim%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="1400" height="1000" frameborder="0" scrolling="no"></iframe>
 
 </body>
 </html>
