--- a/events.html
+++ b/events.html
@@ -35,7 +35,7 @@
 
 		<!-- Calender -->
 		<!--https://support.google.com/calendar/answer/41207?hl=en-->
-		<iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=ucbwim%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="1400" height="1000" frameborder="0" scrolling="no"></iframe>
+		<iframe class="calendar" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=ucbwim%40gmail.com&amp;color=%2329527A&amp;ctz=America%2FLos_Angeles" style="border-width:0" width="1400" height="1000" frameborder="0" scrolling="no"></iframe>
 
 </body>
 </html>
