--- a/index.html
+++ b/index.html
@@ -74,11 +74,23 @@
 
     	<label for="email"><b>Email</b></label>
     	<input type="text" placeholder="Enter Email" name="email" required>
-    	<div class="clearfix">
-      <button type="submit" class="signupbtn">Sign Up</button>
-    </div>
-  </div>
-</form>
+	    	<div class="clearfix">
+	      		<button type="submit" class="signupbtn">Sign Up</button>
+	    	</div>
+  		</div>
+		</form>
+
+		<!-- Facebook -->
+		<h1> And follow us on Facebook! </h1>
+<!--https://developers.facebook.com/docs/plugins/save
+	https://www.wired.com/2010/04adding-facebook-like-buttons-to-your-site-is-damn-easy/ -->
+		<div id="fb-root"></div>
+		<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FWIMatUCB%2F&tabs=timeline%2C%20events&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+		<div class="fb-page" data-href="https://www.facebook.com/WIMatUCB/" data-tabs="timeline, events" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/WIMatUCB/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/WIMatUCB/">Women in Mathematics at Berkeley - WIM</a></blockquote></div>
+
+
+	
+		
 
 
 
@@ -123,7 +135,14 @@ function showSlides() {
     slides[slideIndex-1].style.display = "block"; 
     setTimeout(showSlides, 4000); // Change image every 2 seconds
 }
-
+ //facebook button
+(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.12';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));
 
 </script>    
 
