--- a/index.html
+++ b/index.html
@@ -33,62 +33,68 @@
 			</nav>
 		</header>
 
+<div class="everything_besides_header"> <!--this div fixes the height of the main page-->
 		<!-- Slideshow -->
 		<div class="slideshow-container">
 
 		  <!-- Full-width images with number and caption text -->
+		  <div class="item active"> <!--this div is used to resize all images so height doesnt change 
+		  	throughout slideshow-->
 		  <div class="mySlides fade">
 		    <img src="img1.jpg" style="width:100%">
-		    <div class="text">Caption Text</div>
+		    <!--<div class="text">Caption Text</div>-->
 		  </div>
 
 		  <div class="mySlides fade">
 		    <img src="img2.jpg" style="width:100%">
-		    <div class="text">Caption Two</div>
+		    <!--<div class="text">Caption Two</div>-->
 		  </div>
 
 		  <div class="mySlides fade">
 		    <img src="img3.jpg" style="width:100%">
-		    <div class="text">Caption Three</div>
+		    <!--<div class="text">Caption Three</div>-->
 		  </div>
 
 		  <!-- Next and previous buttons -->
 		  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 		  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-		</div>
-		<br>
+		  	<!-- The dots/circles for slideshow -->
+			</div> <!--end item active here-->
 
-		<!-- The dots/circles -->
-		<div style="text-align:center">
-		  <span class="dot" onclick="currentSlide(1)"></span> 
-		  <span class="dot" onclick="currentSlide(2)"></span> 
-		  <span class="dot" onclick="currentSlide(3)"></span> 
+			<div style="text-align:center" class="slide-buttons">
+			  <span class="dot" onclick="currentSlide(1)"></span> 
+			  <span class="dot" onclick="currentSlide(2)"></span> 
+			  <span class="dot" onclick="currentSlide(3)"></span> 
+			</div>
 		</div>
+	
 
 		<!-- Mailing List -->
-		<form class="form" action="/action_page.php" style="border:1px solid #ccc">
- 		<div class="container">
-    	<h1>Join Us</h1>
+		<form class="form" action="/action_page.php" >
+ 		<div class="email-container">
+    	<h1>JOIN US</h1>
     	<p>Please fill in this form to be added to our emailing list.</p>
     	<hr>
 
-    	<label for="email"><b>Email</b></label>
-    	<input type="text" placeholder="Enter Email" name="email" required>
+    	<label for="email"><b>Email:</b></label>
+    	<input class="enter-email" type="text" placeholder="wim@berkeley.edu" name="email" required>
 	    	<div class="clearfix">
-	      		<button type="submit" class="signupbtn">Sign Up</button>
+	      		<button type="submit" class="signupbtn">SIGN UP</button>
 	    	</div>
   		</div>
 		</form>
 
 		<!-- Facebook -->
-		<h1> And follow us on Facebook! </h1>
+		<!--<h1> And follow us on Facebook! </h1>-->
 <!--https://developers.facebook.com/docs/plugins/save
 	https://www.wired.com/2010/04adding-facebook-like-buttons-to-your-site-is-damn-easy/ -->
-		<div id="fb-root"></div>
-		<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FWIMatUCB%2F&tabs=timeline%2C%20events&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+		<div id="fb-root"></div> 
+
+		<iframe class="fb-frame" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FWIMatUCB%2F&tabs=timeline%2C%20events&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" style="border:none;overflow:hidden" scrolling="no" allowTransparency="true"></iframe>
+
 		<div class="fb-page" data-href="https://www.facebook.com/WIMatUCB/" data-tabs="timeline, events" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/WIMatUCB/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/WIMatUCB/">Women in Mathematics at Berkeley - WIM</a></blockquote></div>
 
-
+</div>
 	
 		
 
