--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 		<iframe class="fb-frame" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FWIMatUCB%2F&tabs=timeline%2C%20events&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" style="border:none;overflow:hidden" scrolling="no" allowTransparency="true"></iframe>
 
-		<div class="fb-page" data-href="https://www.facebook.com/WIMatUCB/" data-tabs="timeline, events" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/WIMatUCB/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/WIMatUCB/">Women in Mathematics at Berkeley - WIM</a></blockquote></div>
+		<!--<div class="fb-page" data-href="https://www.facebook.com/WIMatUCB/" data-tabs="timeline, events" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/WIMatUCB/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/WIMatUCB/">Women in Mathematics at Berkeley - WIM</a></blockquote></div>-->
 
 </div>
 	
