--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		  	<!-- The dots/circles for slideshow -->
 			</div> <!--end item active here-->
 
-			<div style="text-align:center" class="slide-buttons">
+			<div class="slide-buttons">
 			  <span class="dot" onclick="currentSlide(1)"></span> 
 			  <span class="dot" onclick="currentSlide(2)"></span> 
 			  <span class="dot" onclick="currentSlide(3)"></span> 
