--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section>
             <header>
                 <a href="#" class="logo"><img src="wim_no_text.png" style="width:200px" ></a>
-                <h1 class="title">Women in Mathematics at Berkeley</h1>
+                <p class="title">Women in Mathematics at Berkeley</p>
 
                 <a class="toggle"><img src="nav_bar.png" style="width:30px" ></a>
                 <ul id="navigation_bar" class="active main_nav_bar">
@@ -41,6 +41,11 @@
 				</ul>
             </header>
         </section>
+
+        <section>
+            
+        </section>
+
     </body>
     
 </html>
