Added in Slideshow and footer

--- a/index.html
+++ b/index.html
@@ -14,38 +14,140 @@
             })</script>
     </head>
     <body>
-        <section>
-            <header>
-                <a href="#" class="logo"><img src="wim_no_text.png" style="width:200px" ></a>
-                <p class="title">Women in Mathematics at Berkeley</p>
+        <section class="container">
+            <!-- header -->
+            <section class="header">
+                <header>
+                    <a href="#" class="logo"><img src="wim_no_text.png" style="width:200px" ></a>
+                    <p class="title">Women in Mathematics at Berkeley</p>
 
-                <a class="toggle"><img src="nav_bar.png" style="width:30px" ></a>
-                <ul id="navigation_bar" class="active main_nav_bar">
-                    <li class="about"><a href="about.html">About</a></li>
-					<li class="events"><a href="events.html">Events</a></li>
-                    <li class="resources"><a href="#">Resources</a>
-                        <ul class="drop-menu">
-                            <li><a href="helpful-links.html">Helpful Links</a></li>
-                            <li><a href="study-files.html">Study Files</a></li>
-                        </ul>
-                    </li>
-                   <!-- <div class="dropdown">
-                        <li><a onclick="drop_down()" class="dropbtn">Resources <arrow class="down"></arrow></a></li>
-                        <div id="myDropdown" class="dropdown-content">
-                            <a href="helpful-links.html">Helpful Links</a>
-                            <a href="study-files.html">Study Files</a>
-                      	</div>
-                  	</div>-->
-					<li class="diversity"><a href="diverstiy.html">Diverstiy</a></li>
-					<li class="contact"><a href="contact.html">Contact</a></li>
-				</ul>
-            </header>
+                    <a class="toggle"><img src="nav_bar.png" style="width:30px" ></a>
+                    <ul id="navigation_bar" class="active main_nav_bar">
+                        <li class="about"><a href="about.html">About</a></li>
+    					<li class="events"><a href="events.html">Events</a></li>
+                        <li class="resources"><a href="#">Resources</a>
+                            <ul class="drop-menu">
+                                <li><a href="helpful-links.html">Helpful Links</a></li>
+                                <li><a href="study-files.html">Study Files</a></li>
+                            </ul>
+                        </li>
+                       <!-- <div class="dropdown">
+                            <li><a onclick="drop_down()" class="dropbtn">Resources <arrow class="down"></arrow></a></li>
+                            <div id="myDropdown" class="dropdown-content">
+                                <a href="helpful-links.html">Helpful Links</a>
+                                <a href="study-files.html">Study Files</a>
+                          	</div>
+                      	</div>-->
+    					<li class="diversity"><a href="diverstiy.html">Diverstiy</a></li>
+    					<li class="contact"><a href="contact.html">Contact</a></li>
+    				</ul>
+                </header>
+            </section>
+
+            <br />
+            <!-- main body -->
+            <section class="main_body">
+
+                <!-- Slideshow -->
+                <div class="slideshow-container">
+
+                  <!-- Full-width images with number and caption text -->
+                  <div class="item active"> <!--this div is used to resize all images so height doesnt change 
+                    throughout slideshow-->
+                  <div class="homepage_slides fade" style="display: none;">
+                    <img src="img1.jpg" style="width:100%">
+                    <!--<div class="text">Caption Text</div>-->
+                  </div>
+
+                  <div class="homepage_slides fade" style="display: none;">
+                    <img src="img2.jpg" style="width:100%">
+                    <!--<div class="text">Caption Two</div>-->
+                  </div>
+
+                  <div class="homepage_slides fade" style="display: none;"> 
+                    <img src="img3.jpg" style="width:100%">
+                    <!--<div class="text">Caption Three</div>-->
+                  </div>
+
+                  <!-- Next and previous buttons -->
+                  <a class="prev" onclick="slide_arrow_control(-1)">&#10094;</a>
+                  <a class="next" onclick="slide_arrow_control(1)">&#10095;</a>
+
+                    <!-- The dot_control/circles for slideshow -->
+                    </div> <!--end item active here-->
+
+                    <div class="slide-buttons" style="text-align: center;">
+                      <span class="dot" onclick="slide_dot_control(1)"></span> 
+                      <span class="dot" onclick="slide_dot_control(2)"></span> 
+                      <span class="dot" onclick="slide_dot_control(3)"></span> 
+                    </div>
+                </div>
+                <script type="text/javascript" language="javascript">
+                    var slide_current_index = 0;
+                    show_slide();
+                    var slides, dot_control;
+
+                    function show_slide() {
+                        var i;
+                        //retrieve dot and slide element
+                        slides = document.getElementsByClassName("homepage_slides"); 
+                        dot_control = document.getElementsByClassName("dot");
+                        for (i = 0; i < slides.length; i++) {
+                           slides[i].style.display = "none";  
+                        }
+                        slide_current_index++; //increment index
+                        if (slide_current_index> slides.length) {slide_current_index = 1}    
+                        for (i = 0; i < dot_control.length; i++) {
+                            dot_control[i].className = dot_control[i].className.replace(" active", ""); //remove the active in class
+                        }
+                        slides[slide_current_index-1].style.display = "block";  
+                        dot_control[slide_current_index-1].className += " active";
+                        setTimeout(show_slide, 3000); // Change image every 3 seconds
+
+                    }
+
+                    function slide_arrow_control(given_index) { //controls arrows when clicked
+                        slide_current_index += given_index;
+                        if (slide_current_index> slides.length) {slide_current_index = 1}
+                        else if(slide_current_index<1){slide_current_index = slides.length}
+                        for (i = 0; i < slides.length; i++) {
+                           slides[i].style.display = "none";  
+                        }
+                        for (i = 0; i < dot_control.length; i++) {
+                            dot_control[i].className = dot_control[i].className.replace(" active", "");
+                        }
+                        slides[slide_current_index-1].style.display = "block";  
+                        dot_control[slide_current_index-1].className += " active";
+
+                    }
+
+                    function slide_dot_control(index) { //controls the dots when clicked
+                        if (index> slides.length) {index = 1}
+                        else if(index<1){index = slides.length}
+                        for (i = 0; i < slides.length; i++) {
+                           slides[i].style.display = "none";  
+                        }
+                        for (i = 0; i < dot_control.length; i++) {
+                            dot_control[i].className = dot_control[i].className.replace(" active", "");
+                        }
+                        slides[index-1].style.display = "block";  
+                        dot_control[index-1].className += " active";
+
+                    }
+                </script>
+            </section>
+
+            <br />
+            <br />
+
+            <!-- footer -->
+            <section class="footer">
+                <footer>
+                    <h1>Contact Us</h1>
+
+                </footer>
+            </section>
         </section>
-
-        <section>
-            
-        </section>
-
     </body>
     
 </html>
