--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
                     <a class="toggle"><img src="nav_bar.png" style="width:30px" ></a>
                     <ul id="navigation_bar" class="active main_nav_bar">
-                        <li class="about"><a href="about.html">About</a></li>
+                        <li class="about"><a href="#about">About</a></li>
     					<li class="events"><a href="events.html">Events</a></li>
                         <li class="resources"><a href="#">Resources</a>
                             <ul class="drop-menu">
@@ -135,7 +135,13 @@
 
                     }
                 </script>
-            </section>
+
+                <!-- About -->
+                <div id="about">
+                    <p>About Us</p>
+                </div>
+
+            </section> <!-- main_body -->
 
             <br />
             <br />
@@ -147,7 +153,8 @@
 
                 </footer>
             </section>
-        </section>
+
+        </section> <!-- container -->
     </body>
     
 </html>
