--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
             <section class="footer">
                 <footer>
                     <h1>Contact Us</h1>
+                    © Copyright 2018 by Women in Mathematics at Berkeley. All Rights Reserved)
+
 
                 </footer>
             </section>
