made title unselectable and fixed transp. issue

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
+
 <html>
     <head>
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scaleable=no"/>
-        <title>menu</title>
+        <title>WiM</title>
         <link rel="stylesheet" type="text/css" href="index.css">
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
@@ -19,11 +21,12 @@
             <section class="header">
                 <header>
                     <a href="#" class="logo"><img src="wim_no_text.png" style="width:200px" ></a>
-                    <p class="title">Women in Mathematics at Berkeley</p>
+                    <div style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;" 
+                        unselectable="on" onselectstart="return false;" onmousedown="return false;"><p class="title">Women in Mathematics at Berkeley</p></div>
 
                     <a class="toggle"><img src="nav_bar.png" style="width:30px" ></a>
                     <ul id="navigation_bar" class="active main_nav_bar">
-                        <li class="about"><a href="#about">About</a></li>
+                        <li class="about"><a href="about.html">About</a></li>
     					<li class="events"><a href="events.html">Events</a></li>
                         <li class="resources"><a href="#">Resources</a>
                             <ul class="drop-menu">
