fixed nav menu margin-top

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <header>
                     <a href="index.html" class="logo"><img src="images/wim_no_text.png" style="width:200px" alt="WiM-logo"></a>
                     <div style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;" 
-                        unselectable="on" onselectstart="return false;" onmousedown="return false;"><p class="title">Women in Mathematics at Berkeley</p></div>
+                        unselectable="on" onselectstart="return false;" onmousedown="return false;"><p class="title">Women in Mathematics <br />at Berkeley</p></div>
 
-                    <a class="toggle"><img src="nav_bar.png" style="width:30px" ></a>
+                    <a class="toggle"><img src="images/nav_bar.png" style="width:30px" ></a>
                     <ul id="navigation_bar" class="active main_nav_bar">
                         <li class="about"><a href="about.html">About</a></li>
     					<li class="events"><a href="events.html">Events</a></li>
