--- a/events.html
+++ b/events.html
@@ -24,7 +24,7 @@
                 <div style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;" 
                     unselectable="on" onselectstart="return false;" onmousedown="return false;"><p class="title">Women in Mathematics at Berkeley</p></div>
 
-                <a class="toggle"><img src="nav_bar.png" style="width:30px" ></a>
+                <a class="toggle"><img src="images/nav_bar.png" style="width:30px" ></a>
                 <ul id="navigation_bar" class="active main_nav_bar">
                     <li class="about"><a href="about.html">About</a></li>
                     <li class="events"><a href="events.html">Events</a></li>
@@ -57,9 +57,6 @@
 
         </section> 
         <!-- END main_body -->
-
-        <br />
-        <br />
 
         <!-- START footer -->
         <section class="footer">
