moved js code into individual .js files

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scaleable=no"/>
+        <meta property="og:image" content="images/wim_no_text.png">
+        <meta property="og:description" content="Women in Mathematics at Berkeley (WIM) is an organization that serves to foster a community and provide a network amongst the undergraduate women in mathematics at Cal. WIMMERS hope to establish a long-lasting relationship with other Berkeley undergraduates, graduate students, and professors, while finding unity in their common love of math.">
+        <meta property="og:title" content="Women in Mathematics at Berkeley">
+
         <title>WiM</title>
         <link rel="stylesheet" type="text/css" href="index.css">
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -84,10 +88,6 @@
                       <span class="dot" onclick="slide_dot_control(3)"></span> 
                     </div>
                 </div>
-                <!-- About -->
-                <div id="about">
-                    <p>About Us</p>
-                </div>
 
             </section> <!-- main_body -->
 
@@ -101,61 +101,9 @@
             </section>
 
         </section> <!-- container -->
-
-<script type="text/javascript" language="javascript">
-    var slide_current_index = 0;
-    show_slide();
-    var slides, dot_control;
-
-    function show_slide() {
-        var i;
-        //retrieve dot and slide element
-        slides = document.getElementsByClassName("homepage_slides"); 
-        dot_control = document.getElementsByClassName("dot");
-        for (i = 0; i < slides.length; i++) {
-           slides[i].style.display = "none";  
-        }
-        slide_current_index++; //increment index
-        if (slide_current_index> slides.length) {slide_current_index = 1}    
-        for (i = 0; i < dot_control.length; i++) {
-            dot_control[i].className = dot_control[i].className.replace(" active", ""); //remove the active in class
-        }
-        slides[slide_current_index-1].style.display = "block";  
-        dot_control[slide_current_index-1].className += " active";
-        setTimeout(show_slide, 3000); // Change image every 3 seconds
-
-    }
-
-    function slide_arrow_control(given_index) { //controls arrows when clicked
-        slide_current_index += given_index;
-        if (slide_current_index> slides.length) {slide_current_index = 1}
-        else if(slide_current_index<1){slide_current_index = slides.length}
-        for (i = 0; i < slides.length; i++) {
-           slides[i].style.display = "none";  
-        }
-        for (i = 0; i < dot_control.length; i++) {
-            dot_control[i].className = dot_control[i].className.replace(" active", "");
-        }
-        slides[slide_current_index-1].style.display = "block";  
-        dot_control[slide_current_index-1].className += " active";
-
-    }
-
-    function slide_dot_control(index) { //controls the dots when clicked
-        if (index> slides.length) {index = 1}
-        else if(index<1){index = slides.length}
-        for (i = 0; i < slides.length; i++) {
-           slides[i].style.display = "none";  
-        }
-        for (i = 0; i < dot_control.length; i++) {
-            dot_control[i].className = dot_control[i].className.replace(" active", "");
-        }
-        slides[index-1].style.display = "block";  
-        dot_control[index-1].className += " active";
-
-    }
-</script>
-
         
+        
+<!-- Scripts -->
+<script src="scripts/slideshow-functionality.js"></script>
 </body>    
 </html>
