--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,17 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en-US">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scaleable=no"/>
     <title>WiM</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scaleable=no"/>
+
+    <meta property="og:image" content="images/wim_no_text.png">
+    <meta property="og:description" content="Women in Mathematics at Berkeley (WIM) is an organization that serves to foster a community and provide a network amongst the undergraduate women in mathematics at Cal. WIMMERS hope to establish a long-lasting relationship with other Berkeley undergraduates, graduate students, and professors, while finding unity in their common love of math.">
+    <meta property="og:title" content="Women in Mathematics at Berkeley">
+
     <link rel="stylesheet" type="text/css" href="index.css">
+
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script type="text/javascript">
@@ -22,7 +29,7 @@
             <header>
                 <a href="index.html" class="logo"><img src="images/wim_no_text.png" style="width:200px" ></a>
                 <div style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;" 
-                    unselectable="on" onselectstart="return false;" onmousedown="return false;"><p class="title">Women in Mathematics at Berkeley</p></div>
+                    unselectable="on" onselectstart="return false;" onmousedown="return false;"><p class="title">Women in Mathematics <br />at Berkeley</p></div>
 
                 <a class="toggle"><img src="images/nav_bar.png" style="width:30px" ></a>
                 <ul id="navigation_bar" class="active main_nav_bar">
