--- a/index.html
+++ b/index.html
@@ -1,107 +1,110 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, user-scaleable=no"/>
-        <meta property="og:image" content="images/wim_no_text.png">
-        <meta property="og:description" content="Women in Mathematics at Berkeley (WIM) is an organization that serves to foster a community and provide a network amongst the undergraduate women in mathematics at Cal. WIMMERS hope to establish a long-lasting relationship with other Berkeley undergraduates, graduate students, and professors, while finding unity in their common love of math.">
-        <meta property="og:title" content="Women in Mathematics at Berkeley">
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+    <meta charset="utf-8">
+    <title>WiM</title>
 
-        <title>WiM</title>
-        <link rel="stylesheet" type="text/css" href="index.css">
-        <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-        <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-        <script type="text/javascript">
-            $(document).ready(function() {
-                $('.toggle').click(function(){
-                    $('ul').toggleClass('active');
-                })
-            })</script>
-    </head>
-    <body>
-        <section class="container">
-            <!-- header -->
-            <section class="header">
-                <header>
-                    <a href="index.html" class="logo"><img src="images/wim_no_text.png" style="width:200px" alt="WiM-logo"></a>
-                    <div style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;" 
-                        unselectable="on" onselectstart="return false;" onmousedown="return false;"><p class="title">Women in Mathematics <br />at Berkeley</p></div>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scaleable=no"/>
 
-                    <a class="toggle"><img src="images/nav_bar.png" style="width:30px" ></a>
-                    <ul id="navigation_bar" class="active main_nav_bar">
-                        <li class="about"><a href="about.html">About</a></li>
-    					<li class="events"><a href="events.html">Events</a></li>
-                        <li class="resources"><a href="#">Resources</a>
-                            <ul class="drop-menu">
-                            <li><a href="helpful-links.html">Helpful Links</a></li>
-                            <li><a href="study-files.html">Study Files</a></li>
-                            </ul>
-                        </li>
-                       <!-- <div class="dropdown">
-                            <li><a onclick="drop_down()" class="dropbtn">Resources <arrow class="down"></arrow></a></li>
-                            <div id="myDropdown" class="dropdown-content">
-                                <a href="helpful-links.html">Helpful Links</a>
-                                <a href="study-files.html">Study Files</a>
-                          	</div>
-                      	</div>-->
-    					<li class="diversity"><a href="diverstiy.html">Diverstiy</a></li>
-    					<li class="contact"><a href="contact.html">Contact</a></li>
-    				</ul>
-                </header>
-            </section>
+    <meta property="og:image" content="images/wim_no_text.png">
+    <meta property="og:description" content="Women in Mathematics at Berkeley (WIM) is an organization that serves to foster a community and provide a network amongst the undergraduate women in mathematics at Cal. WIMMERS hope to establish a long-lasting relationship with other Berkeley undergraduates, graduate students, and professors, while finding unity in their common love of math.">
+    <meta property="og:title" content="Women in Mathematics at Berkeley">
 
-            <br />
-            <!-- main body -->
-            <section class="main_body">
+    <link rel="stylesheet" type="text/css" href="index.css">
 
-                <!-- Slideshow -->
-                <div class="slideshow-container">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('.toggle').click(function(){
+                $('ul').toggleClass('active');
+            })
+        })</script>
+</head>
+<body>
+    <section class="container">
+        <!-- header -->
+        <section class="header">
+            <header>
+                <a href="index.html" class="logo"><img src="images/wim_no_text.png" style="width:200px" alt="WiM-logo"></a>
+                <div style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;" 
+                    unselectable="on" onselectstart="return false;" onmousedown="return false;"><p class="title">Women in Mathematics <br />at Berkeley</p></div>
 
-                  <!-- Full-width images with number and caption text -->
-                  <div class="item active"> <!--this div is used to resize all images so height doesnt change 
-                    throughout slideshow-->
-                  <div class="homepage_slides fade" style="display: none;">
-                    <img src="images/img1.jpg" style="width:100%">
-                    <!--<div class="text">Caption Text</div>-->
-                  </div>
+                <a class="toggle"><img src="images/nav_bar.png" style="width:30px" ></a>
+                <ul id="navigation_bar" class="active main_nav_bar">
+                    <li class="about"><a href="about.html">About</a></li>
+                    <li class="events"><a href="events.html">Events</a></li>
+                    <li class="resources"><a href="#">Resources</a>
+                        <ul class="drop-menu">
+                        <li><a href="helpful-links.html">Helpful Links</a></li>
+                        <li><a href="study-files.html">Study Files</a></li>
+                        </ul>
+                    </li>
+                   <!-- <div class="dropdown">
+                        <li><a onclick="drop_down()" class="dropbtn">Resources <arrow class="down"></arrow></a></li>
+                        <div id="myDropdown" class="dropdown-content">
+                            <a href="helpful-links.html">Helpful Links</a>
+                            <a href="study-files.html">Study Files</a>
+                        </div>
+                    </div>-->
+                    <li class="diversity"><a href="diverstiy.html">Diverstiy</a></li>
+                    <li class="contact"><a href="contact.html">Contact</a></li>
+                </ul>
+            </header>
+        </section>
 
-                  <div class="homepage_slides fade" style="display: none;">
-                    <img src="images/img2.jpg" style="width:100%">
-                    <!--<div class="text">Caption Two</div>-->
-                  </div>
+        <br />
+        <!-- main body -->
+        <section class="main_body">
 
-                  <div class="homepage_slides fade" style="display: none;"> 
-                    <img src="images/img3.jpg" style="width:100%">
-                    <!--<div class="text">Caption Three</div>-->
-                  </div>
+            <!-- Slideshow -->
+            <div class="slideshow-container">
 
-                  <!-- Next and previous buttons -->
-                  <a class="prev" onclick="slide_arrow_control(-1)">&#10094;</a>
-                  <a class="next" onclick="slide_arrow_control(1)">&#10095;</a>
+              <!-- Full-width images with number and caption text -->
+              <div class="item active"> <!--this div is used to resize all images so height doesnt change 
+                throughout slideshow-->
+              <div class="homepage_slides fade" style="display: none;">
+                <img src="images/img1.jpg" style="width:100%">
+                <!--<div class="text">Caption Text</div>-->
+              </div>
 
-                    <!-- The dot_control/circles for slideshow -->
-                    </div> <!--end item active here-->
+              <div class="homepage_slides fade" style="display: none;">
+                <img src="images/img2.jpg" style="width:100%">
+                <!--<div class="text">Caption Two</div>-->
+              </div>
 
-                    <div class="slide-buttons" style="text-align: center;">
-                      <span class="dot" onclick="slide_dot_control(1)"></span> 
-                      <span class="dot" onclick="slide_dot_control(2)"></span> 
-                      <span class="dot" onclick="slide_dot_control(3)"></span> 
-                    </div>
+              <div class="homepage_slides fade" style="display: none;"> 
+                <img src="images/img3.jpg" style="width:100%">
+                <!--<div class="text">Caption Three</div>-->
+              </div>
+
+              <!-- Next and previous buttons -->
+              <a class="prev" onclick="slide_arrow_control(-1)">&#10094;</a>
+              <a class="next" onclick="slide_arrow_control(1)">&#10095;</a>
+
+                <!-- The dot_control/circles for slideshow -->
+                </div> <!--end item active here-->
+
+                <div class="slide-buttons" style="text-align: center;">
+                  <span class="dot" onclick="slide_dot_control(1)"></span> 
+                  <span class="dot" onclick="slide_dot_control(2)"></span> 
+                  <span class="dot" onclick="slide_dot_control(3)"></span> 
                 </div>
+            </div>
 
-            </section> <!-- main_body -->
+        </section> <!-- main_body -->
 
-            <!-- footer -->
-            <section class="footer">
-                <footer>
-                    <h1>Contact Us</h1>
-                    © Copyright 2018 by Women in Mathematics at Berkeley. All Rights Reserved
+        <!-- footer -->
+        <section class="footer">
+            <footer>
+                <h1>Contact Us</h1>
+                © Copyright 2018 by Women in Mathematics at Berkeley. All Rights Reserved
 
-                </footer>
-            </section>
+            </footer>
+        </section>
 
-        </section> <!-- container -->
-        
+    </section> <!-- container -->
+
         
 <!-- Scripts -->
 <script src="scripts/slideshow-functionality.js"></script>
