fixed footer height

--- a/events.html
+++ b/events.html
@@ -69,7 +69,7 @@
         <section class="footer">
         <footer>
             <h1>Contact Us</h1>
-            © Copyright 2018 by Women in Mathematics at Berkeley. All Rights Reserved
+            <p>© Copyright 2018 by Women in Mathematics at Berkeley. All Rights Reserved</p>
         </footer>
         </section> 
         <!-- END FOOTER -->
