--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             })
         })</script>
 </head>
+    
 <body>
     <section class="container">
         <!-- header -->
@@ -98,7 +99,7 @@
         <section class="footer">
             <footer>
                 <h1>Contact Us</h1>
-                © Copyright 2018 by Women in Mathematics at Berkeley. All Rights Reserved
+                <p>© Copyright 2018 by Women in Mathematics at Berkeley. All Rights Reserved</p>
 
             </footer>
         </section>
