--- a/study-files.html
+++ b/study-files.html
@@ -6,13 +6,19 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scaleable=no"/>
 
+    <!-- METADATA -->
     <meta property="og:image" content="images/wim_no_text.png">
     <meta property="og:description" content="Women in Mathematics at Berkeley (WIM) is an organization that serves to foster a community and provide a network amongst the undergraduate women in mathematics at Cal. WIMMERS hope to establish a long-lasting relationship with other Berkeley undergraduates, graduate students, and professors, while finding unity in their common love of math.">
     <meta property="og:title" content="Women in Mathematics at Berkeley">
 
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <!-- CSS FILES -->
+    <link rel="stylesheet" type="text/css" href="css_files/index.css">
+    <link rel="stylesheet" type="text/css" href="css_files/slideshow.css">
+    <link rel="stylesheet" type="text/css" href="css_files/calendar.css">
 
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- FAVICON [NOTE: REPLACE WHEN GIVEN 32X32 IMG] -->
+    <link rel="shortcut icon" type="image/x-icon" href="images/wim_no_text.png" />
+    
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script type="text/javascript">
         $(document).ready(function() {
@@ -48,7 +54,7 @@
                             <a href="study-files.html">Study Files</a>
                         </div>
                     </div>-->
-                    <li class="diversity"><a href="diverstiy.html">Diverstiy</a></li>
+                    <li class="diversity"><a href="diversity.html">Diversity</a></li>
                     <li class="contact"><a href="contact.html">Contact</a></li>
                 </ul>
             </header>
@@ -72,8 +78,10 @@
         <!-- START footer -->
         <section class="footer">
         <footer>
-            <h1>Contact Us</h1>
-            <p>© Copyright 2018 by Women in Mathematics at Berkeley. All Rights Reserved</p>
+            <hr> <!--adds seperation line-->
+            <p>
+            Copyright © 2018 Women in Mathematics at Berkeley.<br />
+            All Rights Reserved.</p>
         </footer>
         </section> 
         <!-- END FOOTER -->
