include facebook_ico to footer

--- a/events.html
+++ b/events.html
@@ -75,9 +75,15 @@
         <section class="footer">
         <footer>
             <hr> <!--adds seperation line-->
-            <p>
-            Copyright © 2018 Women in Mathematics at Berkeley.<br />
-            All Rights Reserved.</p>
+            <table>
+                <tr>
+                    <a href="https://www.facebook.com/WIMatUCB?ref=br_tf"> <img src="images/ico_facebook.png" alt="Find us on Facebook"></a>
+                </tr>
+                <tr>
+                    <p>Copyright © 2018 Women in Mathematics at Berkeley.<br />
+                    All Rights Reserved.</p>
+                </tr>
+            </table>
         </footer>
         </section> 
         <!-- END FOOTER -->
