fixed text overflow issue

--- a/events.html
+++ b/events.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
     <meta charset="utf-8">
-    <title>WiM</title>
+    <title>WIM</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scaleable=no"/>
     
@@ -77,7 +77,7 @@
             <hr> <!--adds seperation line-->
             <table>
                 <tr>
-                    <a href="https://www.facebook.com/WIMatUCB?ref=br_tf"> <img src="images/ico_facebook.png" alt="Find us on Facebook"></a>
+                    <a target="_blank" href="https://www.facebook.com/WIMatUCB?ref=br_tf"> <img src="images/ico_facebook.png" alt="Find us on Facebook"></a>
                 </tr>
                 <tr>
                     <p>Copyright © 2018 Women in Mathematics at Berkeley.<br />
