--- a/diversity.html
+++ b/diversity.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" type="text/css" href="css_files/slideshow.css">
     <link rel="stylesheet" type="text/css" href="css_files/calendar.css">
 
-    <!-- FAVICON [NOTE: REPLACE WHEN GIVEN 32X32 IMG] -->
-    <link rel="shortcut icon" type="image/x-icon" href="images/wim_no_text.png" />
+    <!-- FAVICON -->
+    <link rel="shortcut icon" type="image/x-icon" href="images/wim_favicon.ico" />
 
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script type="text/javascript">
