change class to id tags

--- a/diversity.html
+++ b/diversity.html
@@ -28,9 +28,9 @@
         })</script>
 </head>
 <body>
-    <section class="container">
+    <section id="container">
         <!-- header -->
-        <section class="header">
+        <section id="header">
             <header>
                 <a href="index.html" class="logo"><img src="images/wim_no_text.png" style="width:200px" ></a>
                 <div style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;" 
@@ -61,7 +61,7 @@
 
         <br />
         <!-- START main_body -->
-        <section class="main_body">
+        <section id="main_body">
 
 
             
@@ -75,7 +75,7 @@
         <br />
 
         <!-- START footer -->
-        <section class="footer">
+        <section id="footer">
         <footer>
             <hr> <!--adds seperation line-->
             <table>
