--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 </head>
     
 <body>
-    <section class="container">
+    <section id="container">
         <!-- header -->
-        <section class="header">
+        <section id="header">
             <header>
                 <a href="index.html" class="logo"><img src="images/wim_no_text.png" style="width:200px" alt="WiM-logo"></a>
                 <div style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;" 
@@ -63,7 +63,7 @@
         </section>
 
         <!-- main body -->
-        <section class="main_body">
+        <section id="main_body">
             
             <!-- Slideshow -->
             <!-- note: slideshow images should be 1600x900px -->
@@ -114,11 +114,13 @@
 
         <!-- footer -->
             <footer>
-                <hr> <!--adds seperation line-->
                 <table>
+
                     <tr>
                         <a target="_blank" href="https://www.facebook.com/WIMatUCB?ref=br_tf"> <img src="images/ico_facebook.png" alt="Find us on Facebook"></a>
                     </tr>
+                                            <hr> <!--adds seperation line-->
+
                     <tr>
                         <p>Copyright © 2018 Women in Mathematics at Berkeley.<br />
                         All Rights Reserved.</p>
