--- a/about.html
+++ b/about.html
@@ -29,9 +29,9 @@
 </head>
     
 <body>
-    <section class="container">
+    <section id="container">
         <!-- header -->
-        <section class="header">
+        <section id="header">
             <header>
                 <a href="index.html" class="logo"><img src="images/wim_no_text.png" style="width:200px" ></a>
                 <div style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;" 
@@ -62,7 +62,7 @@
 
         <br />
         <!-- START main_body -->
-        <section class="main_body">
+        <section id="main_body">
 
 
         <div class="members.box">
@@ -87,7 +87,7 @@
 
 
         <!-- START footer -->
-        <section class="footer">
+        <section id="footer">
         <footer>
             <hr> <!--adds seperation line-->
             <table>
@@ -104,4 +104,6 @@
         <!-- END FOOTER -->
     </section> <!-- container -->
 </body>
+<script>
+</script>
 </html>
